2018-10-29         [RELEASE] Release of filefill 2.0.1 (Nicole Cordes)
2018-10-29 6757ce6 [BUGFIX] Always enforce case sensitive file system (Nicole Cordes)

2018-10-03         [RELEASE] Release of filefill 2.0.0 (Nicole Cordes)
2018-10-03 954bc67 [TASK] Raise TYPO3 dependencies to include 9.5 (Nicole Cordes)
2018-10-03 f681f13 [TASK] Update supporting files to EXT:my_skeleton 0.1.5 (Nicole Cordes)
2018-10-03 53b6dac [FEATURE] Add support for ImageViewHelper "src" usages (Nicole Cordes)
2018-09-12 4673710 [BUGFIX] Throw dedicated exceptions (Nicole Cordes)
2018-09-12 b672e6a [BUGFIX] Comment intended fallthrough (Nicole Cordes)
2018-09-12 0e7e13f [BUGFIX] Simplify PlaceholderResouce and reduce numbers of returns (Nicole Cordes)
2018-09-12 7887ac8 [FEATURE] Add compatibility to TYPO3 9.4 (Nicole Cordes)

2018-09-12         [RELEASE] Release of filefill 1.3.2 (Nicole Cordes)
2018-09-12 fb797f5 [TASK] Update supporting files to EXT:my_skeleton 0.1.4 (Nicole Cordes)
2018-09-12 03ec1b0 [BUGFIX] Handle response from socket correctly (Nicole Cordes)
2018-09-12 8f80f8d [BUGFIX] Prevent uncaught exception while file upload (Nicole Cordes)
2018-09-12 48c2d9c [TASK] Update supporting files to EXT:my_skeleton 0.1.3 (Nicole Cordes)
2018-06-23 795a239 [TASK] Update supporting files to EXT:my_skeleton 0.1.0 (Nicole Cordes)

2018-06-22         [RELEASE] Release of filefill 1.3.1 (Nicole Cordes)
2018-06-21 86775c6 Use short scalar casting (Nicole Cordes)
2018-06-20 0c1d00f fix http_code check for typo3 7.6 (kaywalker)

2018-06-19         [RELEASE] Release of filefill 1.3.0 (Nicole Cordes)
2018-06-19 0bc79fa [BUGFIX] Simplify return conditions in ResourceFactorySlot (Nicole Cordes)
2018-06-11 d16bf28 [TASK] Add documentation for TYPO3_CONF_VARS configuration (Nicole Cordes)
2018-06-11 120b1e7 [BUGFIX] Support multiple domain configuration (Nicole Cordes)
2018-06-07 ff7640d [FEATURE] Allow storage configuration in TYPO3_CONF_VARS (Nicole Cordes)
